# term-project-prog8420

./: .gitignore  Dockerfile  README.md  change.sh  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirement.txt
movie_app/: admin.py  apps.py  models.py  test_model.py
movie_app/api/: filters.py  serializers.py  urls.py  views.py
movie_app/management/commands/: initadmin.py
movie_app/migrations/: 0001_initial.py  0002_rename_review_id_userinteraction_review_and_more.py  0003_movie_producer.py  0004_review_public.py  0005_rename_movie_category_movie_category_and_more.py  0006_rename_reviews_movie_review_num_and_more.py  0007_alter_movie_video.py  0008_alter_movie_year.py  0009_alter_review_description.py  0010_alter_movie_year.py  0011_alter_watchlist_movie.py  0012_set_url_null.py
movie_review/: asgi.py  settings.py  urls.py  wsgi.py
user_app/api/: serializer.py  urls.py  views.py
