[tool.poetry]
authors = ["Ailing Wang <irene024081@gmail.com>"]
description = ""
name = "watchmate"
version = "0.1.0"

[tool.poetry.dependencies]
asgiref = "3.6.0"
attrs = "22.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "39.0.2"
defusedxml = "0.7.1"
dj-rest-auth = "3.0.0"
django = "4.1.7"
django-allauth = "0.52.0"
django-cors-headers = "3.14.0"
django-extensions = "3.2.1"
django-filter = "22.1"
django-rest-framework = "0.1.0"
djangorestframework = "3.14.0"
drf-yasg = "1.21.5"
idna = "3.4"
inflection = "0.5.1"
itypes = "1.2.0"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
markdown = "3.4.1"
markupsafe = "2.1.2"
oauthlib = "3.2.2"
openapi-codec = "1.3.2"
packaging = "23.0"
pycparser = "2.21"
pyjwt = "2.6.0"
pyrsistent = "0.19.3"
python = "^3.10"
python3-openid = "3.2.0"
pytz = "2022.7.1"
pyyaml = "6.0"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
rest-framework-simplejwt = "0.0.1"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.7"
simplejson = "3.18.4"
sqlparse = "0.4.3"
uritemplate = "4.1.1"
urllib3 = "1.26.15"
hypercorn = "^0.14.3"
djangorestframework-simplejwt = "^5.2.2"
pytest = "^7.3.0"
pytest-django = "^4.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
